@@ -1,0 +1,13 @@
+; $Id: en-GB.plg_editors_none.ini 14276 2010-01-18 14:20:28Z louis $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8
+
+PLG_CODEMIRROR_FIELD_LINENUMBERS_LABEL="Line numbers"
+PLG_CODEMIRROR_FIELD_LINENUMBERS_DESC="Display line numbers"
+PLG_CODEMIRROR_FIELD_TABMODE_LABEL="Tab mode"
+PLG_CODEMIRROR_FIELD_TABMODE_DESC="?"
+PLG_CODEMIRROR_FIELD_VALUE_TABMODE_INDENT="Indent"
+PLG_CODEMIRROR_FIELD_VALUE_TABMODE_SHIFT="Shift"
+PLG_CODEMIRROR_XML_DESCRIPTION="This plugin loads the Codemirror editor."
