@@ -4,4 +4,4 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-THIS LOADS A BASIC TEXT ENTRY FIELD="This loads a basic text entry field."
+PLG_NONE_XML_DESCRIPTION="This loads a basic text entry field."
