@@ -1,4 +1,4 @@
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <install
 	version="1.6"
 	type="plugin"
@@ -11,7 +11,7 @@
 	<authorUrl></authorUrl>
 	<copyright></copyright>
 	<license></license>
-	<description></description>
+	<description>PLG_CODEMIRROR_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="codemirror">codemirror.php</filename>
@@ -21,23 +21,23 @@
 			name="linenumbers"
 			type="radio"
 			default="0"
-			label="CodeMirror_LineNumbers"
-			description="CodeMirror_LineNumbers_Desc">
+			label="PLG_CODEMIRROR_FIELD_LINENUMBERS_LABEL"
+			description="PLG_CODEMIRROR_FIELD_LINENUMBERS_DESC">
 			<option
-				value="0">Off</option>
+				value="0">JOFF</option>
 			<option
-				value="1">On</option>
+				value="1">JON</option>
 		</field>
 		<field
 			name="tabmode"
 			type="radio"
 			default="indent"
-			label="CodeMirror_TabMode"
-			description="CodeMirror_TabMode_Desc">
+			label="PLG_CODEMIRROR_FIELD_TABMODE_LABEL"
+			description="PLG_CODEMIRROR_FIELD_TABMODE_DESC">
 			<option
-				value="indent">CodeMirror_TabMode_Indent</option>
+				value="indent">PLG_CODEMIRROR_FIELD_VALUE_TABMODE_INDENT</option>
 			<option
-				value="shift">CodeMirror_TabMode_Shift</option>
+				value="shift">PLG_CODEMIRROR_FIELD_VALUE_TABMODE_SHIFT</option>
 		</field>
 	</fields>
 </install>
